feat: add GraalVM native plugin and configure binaries for FfmTestApp